# mindread

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/data/: dstc2.yaml
configs/model/: bert.yaml  hierarchical.yaml  roberta.yaml
configs/training/: default.yaml  fast.yaml
src/mindread/: __init__.py  demo.py
src/mindread/data/: __init__.py  dataset.py  download.py  dstc2.py  schema.py
src/mindread/evaluation/: __init__.py  evaluate.py  metrics.py
src/mindread/models/: __init__.py  dst.py
src/mindread/training/: __init__.py  train.py  trainer.py
tests/: __init__.py  conftest.py  test_metrics.py  test_models.py  test_schema.py
